--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -20,15 +20,14 @@
 
         <ImageView
             android:id="@+id/ivPhoto"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="6dp"
             android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:scaleType="centerCrop"/>
+            android:layout_centerInParent="true"/>
 
         <TextView
             android:id="@+id/tvTitle"
